! In some cases, the template footer wouldn't be called, and an error would be generated. (Subs.php) ! Why ask Wedge to do a simple addition on tag processing, when developers can do it once and for all? (Subs-BBC.php) ! Inline post edit could generate errors, and trigger yet another error when trying to announce it. (topic.js) + Added 'headline' class to the more tag, for themers to style post introductions. (Subs-BBC.php, index.css) * Upgraded other jQuery 1.4.4 occurrences. (install.php, repair_settings.php, upgrade.php) * ajax_in_progress box was too big. (index.css) - Outdated documentation. (admin.js)

--- a/Themes/default/styles/index.css
+++ b/Themes/default/styles/index.css
@@ -920,6 +920,10 @@ td.footnum a:target, a.fnotel:target
 	font-style: italic
 	color: gray
 
+.post .headline
+	font: italic 120% Georgia, serif
+	padding-bottom: 8px
+
 // Merged double posts
 .mergedate
 	font-size: 10px
@@ -1055,9 +1059,8 @@ a.moderation_link
 	color: #f96f00
 	text-align: center
 	font-size: 16pt
-	padding: 8px
+	padding: 16px
 	width: 100%
-	height: 66px
 	line-height: 25px
 	position: fixed
 	top, left: 0
